tests/negative/abilities/ability_param_value_arg.orng
// ability_param_value_arg.orng:8:20: error: expected an ability argument, got a value
//     do_twice[Int, 5](scale, 146)
//                   ^
// 
ability My_Ability = Int

fn main() -> Int {
    do_twice[Int, 5](scale, 146)
}

fn do_twice[T, ability C](f: T -> T with C, x: T) -> T with C {
    f(f(x))
}

fn scale(x: Int) -> Int with My_Ability { x * My_Ability }
